--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/images/icon-192x192.png",
+      "src": "/images/naradata-logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/images/icon-512x512.png",
+      "src": "/images/naradata-logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
